[package]
name = "streams-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.3"
futures-core = "0.3.25"
futures-util = "0.3.25"
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.11"
